[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dependalabels"
dynamic = ["version"]
description = "Create GitHub PR labels used by Dependabot config"
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "dependalabels@varonathe.org" }
]

keywords = [
    "dependabot",
    "GitHub",
    "GitHub labels",
    "GitHub repository management"
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    "click >= 8.0",
    "ghrepo ~= 0.7",
    "ghreq >= 0.1.1, < 1.0",
    "ghtoken ~= 0.1",
    "pydantic ~= 2.0",
    "ruamel.yaml >=0.15, <1",
]

[project.scripts]
dependalabels = "dependalabels.__main__:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/dependalabels"
"Bug Tracker" = "https://github.com/jwodder/dependalabels/issues"

[tool.hatch.version]
path = "src/dependalabels/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "setup.cfg",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"
